--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "predeploy": "nuxt generate",
-    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
+    "predeploy": "nuxt generate"
   },
   "dependencies": {
     "@nuxt/content": "^1.14.0",
