--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/lucas-cq/cpnt200-a2/issues"
   },
