--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxt/content": "^1.14.0",
     "balm-ui": "^8.40.4",
     "core-js": "^3.15.1",
+    "netlify-cms": "^2.10.179",
     "nuxt": "^2.15.8"
   },
   "devDependencies": {
