--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -19,3 +19,11 @@ collections:
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Description', name: 'description', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
+    - label: "Featured Image"
+    name: "Banner"
+    widget: "image"
+    choose_url: true
+    default: "../assets/man-on-bike.jpg"
+    media_library:
+      config:
+        multiple: true
