--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,11 +6,17 @@ media_folder: static/img
 public_folder: /img
 
 collections:
-    - label: "Featured Image"
-    name: "Banner"
-    widget: "image"
-    choose_url: true
-    default: "../assets/man-on-bike.jpg"
-    media_library:
-      config:
-        multiple: true
+  - name: 'blog'
+    label: 'Blog'
+    folder: 'content/blog'
+    format: 'frontmatter'
+    create: true
+    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    editor:
+      preview: false
+    fields:
+      - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Publish Date', name: 'date', widget: 'datetime' }
+      - { label: 'Description', name: 'description', widget: 'string' }
+      - { label: 'Body', name: 'body', widget: 'markdown' }
+  
