--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -21,7 +21,6 @@ collections:
       - { label: 'Body', name: 'body', widget: 'markdown' }
   - name: 'gallery'
     label: 'Gallery'
-    widget: 'image'
     folder: 'content/gallery'
     format: 'frontmatter'
     create: true
@@ -30,3 +29,4 @@ collections:
       preview: false
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Image', name: 'image', widget: 'image' }
