added date for gallery

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -30,3 +30,4 @@ collections:
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Image', name: 'image', widget: 'image', multiple: true}
+      - { label: 'Image Date', name: 'date', widget: 'datetime'}
