--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -19,6 +19,8 @@ collections:
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Description', name: 'description', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
+
+collections:
   - name: 'gallery'
     label: 'Gallery'
     folder: 'content/gallery'
