--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -33,7 +33,7 @@ collections:
       - { label: 'Image Date', name: 'date', widget: 'datetime'}
   - name: 'map'
     label: 'Map'
-    foler: 'content/maps'
+    folder: 'content/maps'
     format: 'frontmatter'
     create: true
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
