--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,9 +6,9 @@ media_folder: static/images
 public_folder: /images
 
 collections:
-  - name: 'blog'
-    label: 'Blog'
-    folder: 'content/blog'
+  - name: 'color-picker'
+    label: 'Color Picker'
+    folder: 'content/color'
     format: 'frontmatter'
     create: true
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
@@ -16,9 +16,7 @@ collections:
       preview: false
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-      - { label: 'Description', name: 'description', widget: 'string' }
-      - { label: 'Body', name: 'body', widget: 'markdown' }
+      - { label: 'Color', name: 'color', widget: 'color', allowInput: true}
   - name: 'gallery'
     label: 'Car Gallery'
     folder: 'content/gallery'
@@ -29,8 +27,8 @@ collections:
       preview: true
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Image', name: 'image', widget: 'image', multiple: true}
-      - { label: 'Image Date', name: 'date', widget: 'datetime'}
+      - { label: 'Image', name: 'image', widget: 'image', multiple: true }
+      - { label: 'Image Date', name: 'date', widget: 'datetime' }
   - name: 'map'
     label: 'Map'
     folder: 'content/maps'
@@ -40,6 +38,6 @@ collections:
     editor:
       preview: true
     fields:
-      - { label: 'Title', name: 'title', widget: 'string'}
-      - { label: 'Location', name: 'location', widget: 'map'}
-      - { label: 'About This Place', name: 'about-this-place', widget: 'string'}
+      - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Location', name: 'location', widget: 'map' }
+      - { label: 'About This Place', name: 'about-this-place', widget: 'string' }
